build: rename gestalt.py to videogestalt.py and fix build and entry points
Signed-off-by: Stephen L. <lrq3000@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ file = "README.md"
 content-type = "text/markdown"
 
 [project.scripts]
-videogestalt = "videogestalt.videogestalt:main"
+videogestalt = "videogestalt.videogestalt:main_entry"
 
 #[tool.setuptools]
 #package-dir = {"" = "src"}
