feat: can specify custom output path (by default resolves to local filepath) + videogestalt can be used as a Python module
Signed-off-by: Stephen L. <lrq3000@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ file = "README.md"
 content-type = "text/markdown"
 
 [project.scripts]
-videogestalt = "videogestalt.videogestalt:main_entry"
+videogestalt = "videogestalt.videogestalt:main"
 
 #[tool.setuptools]
 #package-dir = {"" = "src"}
