--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
     ]
 maintainers = [
     {name = "Eamonn O'Brien-Strain"},
+    {name = "Stephen Karl Larroque", email = "lrq3000@gmail.com"},
     ]
 requires-python = ">=3.7"
 license = {text = "Mozilla Public License 2.0"} # { file = "LICENSE" }
