--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
-    - uses: FedericoCarboni/setup-ffmpeg@v2
-      id: setup-ffmpeg
+    #- uses: FedericoCarboni/setup-ffmpeg@v2  # ffmpeg is transparently and automatically downloaded by moviepy
+    #  id: setup-ffmpeg
     - name: Install this module
       run: |
         python -m pip install --upgrade --editable .[test,testmeta] --verbose --use-pep517
